# polsim

./: .travis.yml  Cargo.toml  README.md
docs/: beams.html  conventions.html  elements.html  examples.html  format.html  index.html  installation.html  polsim.html  print.html  reference.html  searchindex.js  searchindex.json  simulations.html  usage.html
docs/beams/: circular.html  elliptical.html  linear.html
docs/elements/: hwp.html  polarizer.html  qwp.html  retarder.html  rotator.html
docs/examples/: circular_polarizer.html  crossed_polarizers.html  one_polarizer.html
examples/: circular_polarizer.toml  crossed_polarizers.toml  has_error.toml  one_polarizer.toml
guide_src/: book.toml
guide_src/src/: SUMMARY.md  beams.md  conventions.md  elements.md  examples.md  format.md  installation.md  polsim.md  quickstart.md  reference.md  simulations.md  toml.md  usage.md
guide_src/src/beams/: circular.md  elliptical.md  linear.md
guide_src/src/elements/: hwp.md  polarizer.md  qwp.md  retarder.md  rotator.md
guide_src/src/examples/: circular_polarizer.md  crossed_polarizers.md  one_polarizer.md
proptest-regressions/: validate.txt
src/: common.rs  errors.rs  from_toml.rs  lib.rs  main.rs  report.rs  validate.rs
