[package]
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]
name = "polsim"
version = "0.1.0"
[dependencies]
error-chain = "~0.12.0"
polarization = "~0.1"
quicli = "~0.3.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
toml = "~0.4.6"
num = "~0.2.0"
prettytable-rs = "~0.8.0"

[dev-dependencies]
proptest = "~0.8.6"
assert_approx_eq = "~1.0.0"
